--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@mui/material": "^5.15.14",
     "@thirdweb-dev/react": "^4",
     "@thirdweb-dev/sdk": "^4",
+    "apexcharts": "^3.48.0",
     "ethers": "^5",
     "react": "^18.2",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
